--- a/HighLevelSW/src/navigation/params/navsat_transform_template.yaml
+++ b/HighLevelSW/src/navigation/params/navsat_transform_template.yaml
@@ -39,10 +39,10 @@ use_odometry_yaw: false
 
 # If true, will retrieve the datum from the 'datum' parameter below, if available. If no 'datum' parameter exists,
 # navsat_transform_node will wait until the user calls the 'datum' service with the SetDatum service message.
-wait_for_datum: false
+wait_for_datum: true
 
 # Instead of using the first GPS location and IMU-based heading for the local-frame origin, users can specify the
 # origin (datum) using this parameter. The fields in the parameter represent latitude and longitude in decimal degrees,
 # and heading in radians. As navsat_transform_node assumes an ENU standard, a 0 heading corresponds to east.
-datum: [55.944904, -3.186693, 0.0]
+datum: [45.061596, 7.659868, 0.0, gps, base_link]
 
