--- a/HighLevelSW/src/navigation/params/ekf_template.yaml
+++ b/HighLevelSW/src/navigation/params/ekf_template.yaml
@@ -123,40 +123,40 @@ odom0_pose_rejection_threshold: 5
 odom0_twist_rejection_threshold: 1
 
 # Further input parameter examples
-odom1: example/another_odom
-odom1_config: [false, false, true,
-               false, false, false,
-               false, false, false,
-               false, false, true,
-               false, false, false]
-odom1_differential: false
-odom1_relative: true
-odom1_queue_size: 2
-odom1_pose_rejection_threshold: 2
-odom1_twist_rejection_threshold: 0.2
-odom1_nodelay: false
+# odom1: example/another_odom
+# odom1_config: [false, false, true,
+#                false, false, false,
+#                false, false, false,
+#                false, false, true,
+#                false, false, false]
+# odom1_differential: false
+# odom1_relative: true
+# odom1_queue_size: 2
+# odom1_pose_rejection_threshold: 2
+# odom1_twist_rejection_threshold: 0.2
+# odom1_nodelay: false
 
-pose0: example/pose
-pose0_config: [true,  true,  false,
-               false, false, false,
-               false, false, false,
-               false, false, false,
-               false, false, false]
-pose0_differential: true
-pose0_relative: false
-pose0_queue_size: 5
-pose0_rejection_threshold: 2  # Note the difference in parameter name
-pose0_nodelay: false
+# pose0: example/pose
+# pose0_config: [true,  true,  false,
+#                false, false, false,
+#                false, false, false,
+#                false, false, false,
+#                false, false, false]
+# pose0_differential: true
+# pose0_relative: false
+# pose0_queue_size: 5
+# pose0_rejection_threshold: 2  # Note the difference in parameter name
+# pose0_nodelay: false
 
-twist0: example/twist
-twist0_config: [false, false, false,
-                false, false, false,
-                true,  true,  true,
-                false, false, false,
-                false, false, false]
-twist0_queue_size: 3
-twist0_rejection_threshold: 2
-twist0_nodelay: false
+# twist0: example/twist
+# twist0_config: [false, false, false,
+#                 false, false, false,
+#                 true,  true,  true,
+#                 false, false, false,
+#                 false, false, false]
+# twist0_queue_size: 3
+# twist0_rejection_threshold: 2
+# twist0_nodelay: false
 
 imu0: AgriQFIMUtopic
 imu0_config: [false, false, false,
