--- a/HighLevelSW/src/navigation/params/ekf_template.yaml
+++ b/HighLevelSW/src/navigation/params/ekf_template.yaml
@@ -160,7 +160,7 @@ odom0_twist_rejection_threshold: 1
 
 imu0: AgriQFIMUtopic
 imu0_config: [false, false, false,
-              false,  false,  false,
+              true,  true,  true,
               false, false, false,
               true,  true,  true,
               true,  true,  true]
