--- a/HighLevelSW/src/navigation/params/ekf_template.yaml
+++ b/HighLevelSW/src/navigation/params/ekf_template.yaml
@@ -66,7 +66,7 @@ permit_corrected_publication: false
 #         estimation node from robot_localization! However, that instance should *not* fuse the global data.
 map_frame: map              # Defaults to "map" if unspecified
 odom_frame: odom            # Defaults to "odom" if unspecified
-base_link_frame: base_link  # Defaults to "base_link" if unspecified
+base_link_frame: base_footprint # Defaults to "base_link" if unspecified
 world_frame: odom           # Defaults to the value of odom_frame if unspecified
 
 # The filter accepts an arbitrary number of inputs from each input message type (nav_msgs/Odometry,
@@ -86,7 +86,8 @@ odom0: odometry/gps
 odom0_config: [true,  true,  true,
               true,  true,  true,
               true,  true,  true,
-              true,  true,  true]
+              true,  true,  true,
+              false,  false,  false]
 
 # If you have high-frequency data or are running with a low frequency parameter value, then you may want to increase
 # the size of the subscription queue so that more measurements are fused.
@@ -160,9 +161,9 @@ odom0_twist_rejection_threshold: 1
 
 imu0: AgriQFIMUtopic
 imu0_config: [false, false, false,
-              true,  true,  true,
               false, false, false,
-              true,  true,  true,
+              false, false, false,
+              false, true,  true,
               true,  true,  true]
 imu0_nodelay: false
 imu0_differential: false
